<resources>
    <string name="app_name">M8</string>
    <string name="splash">Intelligent Sharing</string>
    <string name="information">© M8s World 2019. All rights reserved</string>
    <string name="click"><u>click here</u></string>
    <string name="commission">Commission "\n"Trees</string>
    <string name="Upload">Upload"\n"Item(s)</string>
    <string name="View">View all"\n"Items</string>
    <string name="myAccount">My"\n"Account</string>
    <string name="refer">M8s business referral services earn 50% commission of services purchased</string>
    <string name="commisiontree">My Commission Trees</string>
    <string name="descrip"><u>Description :</u></string>
    <string name="description">i m a android developer in mandywebdesing</string>
    <string name="feature"><u>Features :</u></string>
    <string name="sharing">Share in any or all networks to create new commission trees</string>
    <string name="sharethis">Buy or Share</string>
    <string name="viewallprperty">Any M8 can share any item in any part of the world with any other M8 if they believe that share will result in a sale</string>
    <string name="bulkviewallprperty">To bulk upload your portfolio please choose the format that suits you best, we will then email you a blank one to complete and upload</string>
    <string name="mandata">Please indicate what % of your commission you would like to offer M8s for finding you a buyer. 50% is our normal average.</string>
    <string name="mandata2">Indicate a cash amount you would like to offer M8\'s for selling your property(s) :"\n""\n"This amount must be in CHF (Swiss Francs) because all commissions on M8 are paid in that currency</string>
    <string name="mandata3">Set this amount for all of your property(s) sold on M8\'s :</string>
    <string name="date">Date "\n" 18/2/2019</string>
    <string name="edit"><u>Edit</u></string>
    <string name="power">Min M<sup>2</sup></string>
    <string name="googleclientId">AIzaSyCGlfDp6qPfEGc71tvwynC-X0dOXWpkIQs</string>
    <string name="facebook_app_id">328697287838869</string>
    <string name="fb_login_protocol_scheme">fb328697287838869</string>
    <string name="NoInternet">No internet connection</string>
    <string name="chf">USD"\n"0</string>
    <string name="mytree">My Tree: </string>
    <string name="propertyName">Property Name: </string>
    <string name="price">Price: </string>
    <string name="commissi">Commission: </string>
    <string name="Delete">Delete</string>
    <string name="Vi">View</string>
    <string name="Share">Share</string>
    <string name="BusinessName">First name*</string>
    <string name="BusinessContact">Last name*</string>
    <string name="businessEmail">Email address*</string>
    <string name="businessPhone">Contact No*</string>
    <string name="Address1">Address1*</string>
    <string name="Address2">Address2*</string>
    <string name="TownCity">Town/City*</string>
    <string name="Postcode">Post code*</string>
    <string name="next">Next</string>
    <string name="totalcommission2">Commissions/discounts paid out vary depending on how many people on the tree. Press the arrows to see how the amounts change.</string>
    <string name="totalcommission3">is the first sharer in all of this items commission trees, the more times this item is shared the more the commission is divided in each tree."\n""\n"The more times you share this item the more commission trees you create so the more chances you have earning the commission or part of it."\n""\n"Please look at the amount next to your name, that is the amount all of the tree above your name will earn if you decide to buy."\n""\n"If you share on, the amount next to the buyer’s name is the amount everyone on the winning commission tree will earn."\n""\n"Share intelligently to earn more and good luck!</string>
    <string name="iagree">I agree with M8\'s terms and conditions, privacy policy and  art statement</string>
    <string name="doyou">Your package has expired, you may now upgrade to a more professional package.</string>
    <string name="logoutmessage">Are you sure want to Logout ?</string>
    <string name="sharCommision">Sharers Commission :</string>
    <string name="uploadPro">Upload  property images (max 10)</string>
    <string name="Download">Download Mandate and Continue</string>
    <string name="propertyNumber">Property number(if Known)</string>
    <string name="agent2">Important."\n\n"PLEASE BE AS ACCURATE AS POSSIBLE. IF AMOUNTS THAT ARE ADVERTISED ON OUR COMMISSION TREES VARY TOO MUCH FROM THE FINAL COMPLETION PRICES OUR M8S MAY AVOID DEALING WITH YOUR COMPANY IN THE FUTURE.</string>
    <string name="agent3">Read the M8 guide to "\n"<u>Selling your own house.</u>"\n""\n"</string>
    <string name="ShreBtn"><b><font color='#68DF2E'>CLICK TO SHARE</font></b>"\n"To earn from the M8 commission trees, share intelligently."\n"<b><font color='#68DF2E'>Sharing makes you money!</font></b></string>
    <string name="btnBuy">By pressing BUY you are committing (subject to contract) to buy this property. Once you have exchanged contracts or given a deposit to the seller this property will be taken off the market. Your request and contact details have been sent to the seller.</string>
    <string name="btnBuyProperty">By pressing BUY you are committing(subject to contract) to buy this property. Once you have exchanged contracts or given a deposit to the seller this property will be taken off the market. Your request and contact details have been sent to the seller.</string>
    <string name="btnBuyInvestment">To invest, click here and we will send you details on how to transfer your investment funds.</string>
    <string name="btnBuyJobs">Please pay my commission."\n"(On reciept of copy of contract M8 will pay this commission tree).</string>
    <string name="btnContact">To arrange a viewing click the icon so an email will be  sent to the seller. Please wait for them to contact you.</string>
    <string name="btnContactJobs">To arrange an interview click the icon so an email will be sent to the seller. Please wait for them to contact you.</string>
    <string name="btnContactInvestment">To get more details about this investment, click here.</string>
    <string name="btnContactOther">If you would like to view this item before you buy click this button, your details will be sent to the seller.</string>
    <string name="freagent">For our 1000s of M8s to market your property and finds a buyer for you, you need to give us the mandate to work on your behalf as referral agents, please read the text below then press next, you will be lead to the mandate page where you can sign it on your phone with your finger."\n\n"As experienced real estate agents we understand that all deals are SUBJECT TO CONTRACT which is only calculable on completion of each sale."\n\nTo find a successful buyer for your property M8 charges the standard real estate agent commission of 3% once the purchase is completed."\n\nThis amount is shared amongst the successful M8s that helped sell your property and the M8 property administration that oversees the sale.</string>
    <string name="freagentJobs">For our 1000s of M8s to assist you in finding suitable employees for your company you need to give us the mandate to work on your behalf as referral agents, please read the text below then press next, you will be lead to the mandate page where you can sign it on your phone with your finger."\n\n"To find successful applicants for your company M8 charges the standard fee of 10% of the employees yearly salary."\n\nThis amount is shared amongst the successful M8s that helped find your employee and the M8 sales administration that oversees the process.</string>
    <string name="freagentCars">For our 1000s of M8s to market your car to find a buyer for you, you need to give us the mandate to work on your behalf as referral agents, please read the text below then press next, you will be lead to the mandate page where you can sign it on your phone with your finger."\n\n"To find a successful buyer for your car M8 charges the standard sales agent commission of 12% once the purchase is completed."\n\nThis amount is shared amongst the successful M8s that helped sell your car and the M8 sales administration that oversees the sale.</string>
    <string name="freagentBoatss">For our 1000s of M8s to market your boat to find a buyer for you, you need to give us the mandate to work on your behalf as referral agents, please read the text below then press next, you will be lead to the mandate page where you can sign it on your phone with your finger."\n\n"To find a successful buyer for your boat M8 charges the standard sales agent commission of 12% once the purchase is completed."\n\nThis amount is shared amongst the successful M8s that helped sell your boat and the M8 sales administration that oversees the sale.</string>
    <string name="freagentJwels">For our 1000s of M8s to market your jewellery to find a buyer for you, you need to give us the mandate to work on your behalf as referral agents, please read the text below then press next, you will be lead to the mandate page where you can sign it on your phone with your finger."\n\n"To find a successful buyer for your jewellery M8 charges the standard sales agent commission of 12% once the purchase is completed."\n\nThis amount is shared amongst the successful M8s that helped sell your jewellery and the M8 sales administration that oversees the sale.</string>
    <string name="freagentMics">For our 1000s of M8s to market your item to find a buyer for you, you need to give us the mandate to work on your behalf as referral agents, please read the text below then press next, you will be lead to the mandate page where you can sign it on your phone with your finger."\n\n"To find a successful buyer for your item M8 charges the standard sales agent commission of 12% once the purchase is completed."\n\nThis amount is shared amongst the successful M8s that helped sell your item and the M8 sales administration that oversees the sale.</string>
    <string name="freagentInvest">For our 1000s of M8s to market your company to help you find investors to, you need to give us the mandate to work on your behalf as referral agents, please read the text below then press next, you will be lead to the mandate page where you can sign it on your phone with your finger."\n\n"To find a successful buyer for your item M8 needs to achieve a competitive commission to offer our M8s to find your investors."\n\nPlease tell us what % of the total amount we raise for you will offer us to as commission once the investment has been completed.</string>
    <string name="freagentInvest2">This amount is shared amongst the successful M8s that helped find your investors and the M8 sales administration that oversees the process.</string>
    <string name="agent">For our 1000s of M8s to market and find buyers for your properties we need to know the average % of a properties sell price you charge your clients."\n\n"As experienced real estate agents we understand that all deals are SUBJECT TO CONTRACT which is only calculable on completion of each sale."\n\n"Please indicate that average  fee here.</string>
    <string name="noInternet">No internet Connection</string>
    <string name="slowinternet">Slow or no Internet Connection"\n"Please check your internet setting</string>
    <string name="checkbusiness">Check box if you have a buisness account?</string>
</resources>