<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".UploadActivity.Mandate.AgentActivity">


    <include
        android:id="@+id/tooolbar"
        layout="@layout/toolbar2" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/tooolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/topmargin"
            android:orientation="vertical">


            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/agent"
                android:textColor="@color/black"
                android:textSize="@dimen/text" />


            <RelativeLayout
                android:id="@+id/relative"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edtSize"
                android:layout_marginTop="@dimen/margin"
                android:background="@color/gray">

                <Spinner
                    android:id="@+id/spineer"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawablePadding="@dimen/drawablepadding" />

            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/important"
                android:layout_marginTop="@dimen/margin"
                android:text="@string/agent2"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="@dimen/text" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/clickLink"
                android:layout_marginTop="@dimen/margin"
                android:text="@string/agent3"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="@dimen/text" />


            <Button
                android:id="@+id/btnNext"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margin"
                android:layout_marginBottom="@dimen/margin"
                android:background="@drawable/buttonback"
                android:text="Next"
                android:textColor="@color/white"
                android:textSize="@dimen/text"
                android:textStyle="bold"

                />


        </LinearLayout>


    </ScrollView>

</RelativeLayout>